--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
+    "@astrojs/db": "^0.14.1",
     "@faker-js/faker": "^9.0.3",
     "astro": "^4.15.9",
     "typescript": "^5.6.2"
