--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@astrojs/db": "^0.14.1",
     "@faker-js/faker": "^9.0.3",
     "astro": "^4.15.9",
+    "astro-htmx": "^1.0.6",
+    "htmx.org": "^1.9.12",
     "typescript": "^5.6.2"
   }
 }
